data/derived/fa15/progs/unify/prog1462.ml.out
Characters 524-540:
  | 5 -> buildArctan(build1, build2)
                    ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
